@@ -11,25 +11,25 @@ EBUILD qbittorrent-3.1.10.ebuild 1381 SHA256 5584c8911db333009eb19156b2b38885ca0
 EBUILD qbittorrent-3.1.11.ebuild 1381 SHA256 a158f002f37d7f611b8d64361b17112c1f39a46297557cb96447f5a51a3633ea SHA512 fa0dd4f14be701bc4c46de15314d9419aebf7782d543f0daa95b2cff1a2aad073e16888fbededfcc7088aab937e8c39d12bb18afc9f0b1915d0cb67eaf5864e6 WHIRLPOOL c17ef7854f730baf8aad97c4611335cf062d9977aa663161297c4bf70c48e41db5007a67b61912fa5ecbaf6e1ddd6c7b6bf713942caa9f49f1c94c130d9ee1c5
 EBUILD qbittorrent-3.1.12.ebuild 1440 SHA256 e84835f7ca65cb8e3c24ebf0e1acbe2729cd4644b0fe4a46221c3ac380118aaf SHA512 5b2ca087b1a850cd7f1731921c21b6129074ad063d58fec12b695e555100f140b5003213e5d8526fd1811c3ef4a3350b6b64c4b354ab1f943b9f1f35432e7b08 WHIRLPOOL 3ac608b3b299c142934a221a3c53ba5b58403949b41e2cdd13e524b10b72e01ddb1879858c8413bacaf5ad4d884d8eea8b89d39d995a7eed38c71bc6de09aba6
 EBUILD qbittorrent-3.1.9.2-r1.ebuild 1380 SHA256 a822b38b4795c4370ef49422dca175f3c162dfe4bf74cc48be7760d07f99174a SHA512 db9a15903db4c8e7911f45a5609699443d8fd71ddc9ed5e44508165bbb964927d25f8204cc382aaf09788c01a99a81205a49f1581727b5491a2035e738304cb6 WHIRLPOOL ccc10144be0dabb5a4575d99ec24f445e1dae3a4dd32f0775c995422bec7aa23f7c34f9a6b52f3cc195e2e36ddd0d75460addfe235e891cc780047fa7f476e48
-EBUILD qbittorrent-9999.ebuild 1909 SHA256 99e669d6af733877e503849de0b33972bd34c6769f9400ba571865a9ba02831d SHA512 a1803989ad3f021a25fd4c21bb5319b542b4974a33ae91247b124a2bb308c981c3b748654410389376ef601a3c615b930704327e02234ea712bbe7241e26bcfe WHIRLPOOL 73496b7ba3012133ba34a31d780b951090d732fbf51190b8e78a9666eaf52e8fa85d055fb5d598748079d7ee7481686d050b18e34acd19b9792fc4555bf4abab
-MISC ChangeLog 40878 SHA256 b1831fd49d1816cfe66e19786361ff67e3121edb6b15a3b36157a1f8fd9072d4 SHA512 5917c0e1c8a5b29093326e60598f55814326378233f1f2a54bdba0172de88d910aeb164a5ad4ab5e0b37ae14dfa122bb5abf7ddb319290e375d47b4eb026dc9a WHIRLPOOL 29b9755868ee81999b4ae88b5b274489ffe7336cc0dd2a305299b7dd3f1c4df915919d57a76a8fb769a58036c2a439ad832a2d00db6358cd8ab511e779bd81e2
+EBUILD qbittorrent-9999.ebuild 1751 SHA256 47a4fe56d4a8aaa0c5426b3f49ee7ca6b187ed87fdd27f205e267859c50c9760 SHA512 90fa1db1b47c510c178b752eb0dffe9829268a917400ba19288df92be2fbb763ed8cd89aa41c02f96b0d50869d8b987995ae99958cb1d1977665f4f58bc9ac72 WHIRLPOOL d78015aa98d38b48633e9f12865e6caf3aaef9fde1cffbafcd6bd88c4197b43b36c5dc370dc56260bdaf0516b753975cc98f05293e0fcb2ff9906316e3e9b821
+MISC ChangeLog 41017 SHA256 96093641fa91b594a29800a8be013f3fe15388e271df627c14ebcbef73546521 SHA512 5679e8b39bede043b8d155b9bf72883e0a0cb7d3f34febf834e778daf669921e64806ee6e2ba1dc57f95b2c4f118929ce9d44a8c94b0cb828c527d371caf54c6 WHIRLPOOL d4b64e0271c1f05f205648b36f57aafdab3159d22484009af9923ee105d7e468b83dd84902923089a7ba3f7cbff1498d71dd8951b850d44f3f25350ad03e9cb8
 MISC metadata.xml 348 SHA256 3a0d424ab15e8392fd443578d49a005886fba9632fe2d09e5fad9cb40c83630a SHA512 a568b179952435992fb1f92511faefb64c7fbfd5d58d6e8b4a9490198b95348f0bfcaa586ac3a71bffca7ed9b48985e9b8aa7e286dc09f02959060453ff7647c WHIRLPOOL 00453c981d5aab5460eb075a6982aeead8b5bc39c53584fe766dd56cf0d3337d1b3384a43900e871b619fd463eee842aad5515d7950c3ae0e87eddd64d19b323
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ7BAEBCABmBQJVJXDbXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOc3oP+JFN5PomhfyeSvIZcP6OEJK6
-NshhvUPs/JMuuAh7r/1ukPQM/1PRon56TgrJHp9r0125Hp3UJmfrK1EWXrztOBUT
-CN1t1kMHKM9njA7qvd5lHCRxKMX+VVGQlVq6riKzW/wpkSv62ucTP3avZh6G7bL3
-cqhVPMrEWR2du70xBAeXBxOSsrVlAZ/ZthyhD+pJtPTyc1EaaT8LdUKxQ3G9vN3e
-e7wH7cOspfsZbB5Zw95t6E8vWVi93tRdYwCwUw8LmQREEkC+3MzZ4DK3XpvhUS4W
-eXaSu3ulKBS4M8cFAm2NfBEhGDp3RomC8ihve66KhSSeYo+ZR7KIAlmKi9BGaOzd
-n0Vr5fdmtU06tg/kPRTw/Ai9zbYzKn/cc5rNrWkcG31ugqVb96lnvMq9Ev1w3AOX
-J1HB/cEVnrusnTq5IEI8n7NCRGlCKoNHF42/1ZAlITwY6gYQDFFCq2s228BPDxlN
-dyFtvh1/0MhPZR+27OrESBpS8atv8Gj8GnuOqUuK5GsOwPKCi/2ythNqW+DQwO+A
-dC7FfqL8r2jqJj8dLei4730aqMKvAYK2xSdWO4pkWbkuDS55jKYsggSMBSSwN9M9
-gsu4G237yv0fplQsdElrUcCM453NZHgQK1v6idTSNaaz6EaDtBY7MlOWG5INKBdK
-XHfQ9tKwAK7jj2Nq31A=
-=e7i0
+iQJ8BAEBCABmBQJVM2/LXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88Tu4P/39Yk77YDvAUfI+f6XlV9puX
+csVjqRN/4GkioFAn+oJH4ZpVNjf2mEGvGMTsBwQMbnj53v9vilU1beXtz5BfQ30c
+ixgwCW/KxjmNlOBodQQHLs+N4cMvZh8il3F3EcfPgtanAOiEj1GfBgNtuB/SCJjs
+i3OASsqjS8CI43JtiNKrHbo6TZbwkxh3jsf+OVr06mry+kg+5yRe0P9upPG0iyxo
+dvYLBp+ntdoEWSK1RjrFDJIzUTtZiefEBWy6qjPfH9RctH1UOFoievtjbc7mkovn
+eCy/1KFnZ9Jnp18P/Ci8JTfpO+BaJYOsurfaRyzrauGOUlynuEiY46dA6ppYGqeT
+BDeIorzvWVR2zujPYj/qanG+eOxzYJLIQ0wvM1T30zLOiLtk8X92DJPIr0hwjSxi
+1+0d2e6n6S/+Do22A5Yrs5FZWvZsajKXOhijUTIyyGIvaHBFBuLqwfTRby7+9Nzh
+qTqRmAI/DAEezey/kvXfZwnw3vKhm3b+HaOd+PJQKSn/g/n+nwPLFwwBztmrXq3e
+3AYDxw6aUnTDeceGiHR6YIOcwYkbvVGQatSoki9didEPV4lv1Vx8qUZDfy33n/X8
+5Pm7nonTLT5SX116TZt52wdTFiTI7X6lHhNjTJYtM7GLnqOaNgA++wkkeNhzyLaN
+gFMpeCrZUq1da5PHx3FX
+=VRiY
 -----END PGP SIGNATURE-----
