@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/qbittorrent-9999.ebuild,v 1.21 2015/03/01 15:49:39 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/qbittorrent-9999.ebuild,v 1.22 2015/04/19 09:05:14 hwoarang Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -21,16 +21,14 @@ fi
 
 LICENSE="GPL-2"
 SLOT="0"
-IUSE="+dbus debug geoip +qt4 qt5 webui +X"
+IUSE="+dbus debug +qt4 qt5 webui +X"
 REQUIRED_USE="^^ ( qt4 qt5 )
-	dbus? ( X )
-	geoip? ( X )"
+	dbus? ( X )"
 
-# geoip and python are runtime deps only (see INSTALL file)
 CDEPEND="
 	dev-libs/boost:=
 	>=dev-qt/qtsingleapplication-2.6.1_p20130904-r1[X?,qt4?,qt5?]
-	>=net-libs/rb_libtorrent-0.16.17
+	>=net-libs/rb_libtorrent-1.0.0
 	sys-libs/zlib
 	qt4? ( dev-qt/qtcore:4
 		dbus? ( dev-qt/qtdbus:4 )
@@ -48,9 +46,7 @@ DEPEND="${CDEPEND}
 	virtual/pkgconfig
 "
 RDEPEND="${CDEPEND}
-	${PYTHON_DEPS}
-	geoip? ( dev-libs/geoip )
-"
+	${PYTHON_DEPS}"
 
 S=${WORKDIR}/${MY_P}
 DOCS=(AUTHORS Changelog README.md TODO)
@@ -67,7 +63,6 @@ src_configure() {
 		--with-qtsingleapplication=system
 		$(use dbus  || echo --disable-qt-dbus)
 		$(use debug && echo --enable-debug)
-		$(use geoip || echo --disable-geoip-database)
 		$(use qt5   && echo --with-qt5)
 		$(use webui || echo --disable-webui)
 		$(use X     || echo --disable-gui)
