@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/qbittorrent
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.242 2015/04/08 18:17:51 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.243 2015/04/19 09:05:14 hwoarang Exp $
+
+  19 Apr 2015; Markos Chandras <hwoarang@gentoo.org> qbittorrent-9999.ebuild:
+  Bump rb_libtorrent dep. Drop geoip support. Bug #546440
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> qbittorrent-3.0.11-r2.ebuild,
   qbittorrent-3.1.10.ebuild, qbittorrent-3.1.11.ebuild,
